# Resume-Parser

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/models/: schemas.py
backend/routers/: resume.py
backend/services/: pdf_extractor.py  rag.py  resume_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: StepIndicator.jsx
frontend/src/views/: View1_SchemaSelector.jsx  View2_PDFUpload.jsx  View3_Results.jsx
